# daily-test

./: .gitignore  README.md
a_package_template/: README.md  main.py  pyproject.toml
aa_py_tools/: .gitignore  README.md  pyproject.toml  test.md
aa_py_tools/src/: __init__.py  class1.py  class2.py  cli.py  func1.py  func2.py
aa_py_tools/tests/: test_import.py
multi_package/: README.md
multi_package/python_module/: __init__.py  example.py  requirements.txt
multi_package/rust_module/: Cargo.toml
multi_package/rust_module/src/: lib.rs
ort_utils/: main.py  pyproject.toml
